# poppler-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ffi.rs  lib.rs  util.rs
