[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>",
          "Denys Vitali <denys@denv.it>"]
name = "poppler"
license = "GPL-2.0"
version = "0.3.1"
description = "Wrapper for the GPL-licensed Poppler PDF rendering library."
repository = "https://github.com/DMSrs/poppler-rs"
edition = "2018"

[dependencies]
cairo-rs = { version = "0.15", features = ["png", "pdf"] }
glib = "0.15"
